syntax = "proto3";

package db;

import 

option go_package = "github.com/demola234/payzone/pb";

message CreateUser {
    string username = 1;
    string email = 2;
    string full_name = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}